@@ -2397,3 +2397,5 @@ seen. gmtime warning still there
 - Fixed a /rehash crash regarding badword all & regex badwords, reported by Angrywolf (#0001230).
 - Fixed an old bug where allow::hostname localhost (or *@localhost) didn't work (#0001115).
 - Fixed a chroot bug, reported by iceblade (#0001112).
+- Badwords filtering is now only done for local clients, previously every server was filtering
+  the message. This will reduce CPU usage, especially at hubs (#0001022).
